--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,5 @@ spring.application.name=composite
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.datasource.url=jdbc:h2:mem:testdb
-composite-api.scheme=http
-composite-api.host=localhost
-composite-api.port=9090
 server.port=9090
+composite.server.base-url=http://localhost:9090
