--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.sql.init.mode=always
 spring.datasource.url=jdbc:h2:mem:testdb
 server.port=9090
 composite.server.base-url=http://localhost:9090
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.http=DEBUG
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+logging.level.org.springframework.web.servlet.mvc.method.annotation=DEBUG
+logging.level.com.fasterxml.jackson.databind=DEBUG
